--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,13 @@
+name: Mon GitHub pipeline
+
+on:
+  push:
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  content: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
