--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,13 @@ jobs:
     - name: Ansible CLI
       # You may pin to the exact commit or the version.
       # uses: tomasnorre/ansible-cli-client@bd08e0a19b445d0a2bc42877fdd7a2e9d632e8e3
-      uses: tomasnorre/ansible-cli-client@0.0.2
-      with:
+      #uses: tomasnorre/ansible-cli-client@0.0.2
+      #with:
         # Command to execute
-        command: # default is ansible-playbook
-          cd /
-          ansible-playbook \
-            -vvv \
-            --inventory inventory/DEV \
-            ansible/test.yml
+      #  command: # default is ansible-playbook
+      run:
+        cd /
+        ansible-playbook \
+          -vvv \
+          --inventory inventory/DEV \
+          ansible/test.yml
