--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
         ansible-playbook \
           -vvv \
           --inventory inventory/DEV \
-          --extra-vars "FTP_PASSWORD_DEV=${FTP_PASSWORD_DEV}" \
+          --extra-vars FTP_PASSWORD_DEV="${FTP_PASSWORD_DEV}" \
           test.yml
