--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Ansible
+      shell: bash
       env:
-        FTP_PASSWORD_DEV: "${{ secrets.FTP_PASSWORD_DEV }}"
+        FTP_PASSWORD_DEV: ${{ secrets.FTP_PASSWORD_DEV }}
       run: |
         cd ansible
         ansible-playbook \
